# reletino

./: .gitignore  README.md  RELETINO_USER_FLOWS_CAPABILITIES.md  compose.yaml  jorges-backend.cursorrules  jorges-frontend.cursorrules
.github/workflows/: alpha_reletino.yml
api/src/: reddit_worker.py
api/src/prompts/: good_examples.md
services/api/: .gitignore  Dockerfile  README.md  agent_history_mini.txt  cookies.json  nixpacks.toml  pyproject.toml
services/api/src/: __init__.py  critino.py  evaluate_relevance.py  reddit_worker.py
services/api/src/interfaces/: __init__.py  db.py  llm.py
services/api/src/lib/: autofill_project.py  chain_utils.py  critino.py  dm_prospect.py  evaluate_relevance.py  generate_response.py  reddit_profile_analysis.py  reddit_utils.py  reddit_worker.py  scrape_reddit_profile.py  update_google_sheet_tracking.py  xml_utils.py
services/api/src/lib/graph/: run_graph.py
services/api/src/lib/graph/profile/: __init__.py  state.py
services/api/src/lib/graph/profile/node/: drafter.py  subreddit_recommender.py
services/api/src/lib/graph/profile/tools/: subreddit.py  web_scraper.py
services/api/src/lib/graph/project_setup/: __init__.py  state.py
services/api/src/lib/graph/project_setup/node/: drafter.py  subreddit_recommender.py
services/api/src/lib/graph/project_setup/tools/: subreddit.py
services/api/src/models/: cot_response.py  evaluation.py  filter_output.py  profile.py  project.py  reddit_comment.py  saved_submission.py  simple_submission.py
services/api/src/prompts/: universal_evaluate_relevance_prompt.xml
services/api/src/tests/: critino.py
services/post_streaming/: README.md  pyproject.toml  railway.json
services/post_streaming/src/: __init__.py  evaluate_relevance.py  filter_with_questions.py  reddit_utils.py  reddit_worker.py  testing_supabase_submissions.py
services/post_streaming/src/models/: __init__.py  evaluated_submission.py  evaluation.py  project.py  relevance_result.py  saved_submission.py
services/post_streaming/src/prompts/: commenting.py  relevance.py  upwork_proposals.py
web/: .env.example  .npmrc  README.md  components.json  email_docs.md  local_env_template  package.json  pnpm-lock.yaml  supabase-gen-types.sh  svelte.config.js  tailwind.config.ts
web/old-web/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json
web/old-web/src/: app.d.ts  app.html  app.pcss  hooks.server.ts
web/old-web/theme/: animation.cjs  color.cjs  typography.cjs
web/src/: app.css  app.d.ts  app.html  hooks.server.ts
web/src/api/: authenticate.ts  fetchSubredditPosts.ts
web/src/controllers/: evaluation.ts
web/src/lib/: DatabaseDefinitions.ts  api.ts  build_index.ts  config.ts  db.ts  mailer.test.ts  mailer.ts  pricing_plans.ts  schemas.ts  supabase.ts  utils.ts
web/supabase/: config.toml
web/theme/: colors.ts  md3.json  md3_pcss_generator.py  typography.ts
(+334 files in other folders)
