[tool.poetry]
name = "src"
version = "0.0.1"
description = "Reletino"
authors = [
    "Jonas Lindberg <jonas.lindberg@futi.no>",
    "Jorge Lewis <jorge.lewis@futi.no>",
]
readme = "README.md"
homepage = "https://releti.no"
repository = "https://github.com/startino/relevantino"
documentation = "https://api.rest.futi.no/docs"
license = "BSL-1.1 (https://github.com/startino/relevantino/blob/alpha/LICENSE)"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
tenacity = "^8.2.3"
supabase = "^2.4.0"
aiohttp = "^3.9.4"
redis = "^5.0.2"
langchain = "^0.1.12"
langchain-community = "^0.0.38"
langchain-openai = "^0.1.1"
praw = "^7.7.1"
markdown = "^3.6"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"
diskcache = "^5.6.3"
pydantic = "^2.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
